# lazywslc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  winget.yml
src/: app.rs  event.rs  main.rs
src/ui/: action_menu.rs  detail.rs  env_tab.rs  help.rs  info_tab.rs  layout.rs  logs_tab.rs  mod.rs  resource_list.rs  stats_tab.rs  status_bar.rs
src/wslc/: client.rs  commands.rs  types.rs
wix/: License.rtf  main.wxs
