[package]
name = "lazywslc"
version = "0.1.1"
edition = "2024"
authors = ["crloewen"]
description = "A lazydocker-inspired TUI dashboard for managing WSL Linux containers via wslc.exe"
license = "MIT"
repository = "https://github.com/crloewen/lazywslc"
keywords = ["wsl", "containers", "tui", "dashboard"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
